@@ -108,6 +108,12 @@ Changes in Backwards Compatibility Policy
   If you have indexed text using those stemmers you may need to reindex.
   (Uwe Schindler, Robert Muir)
 
+Changes in Runtime Behavior
+
+* LUCENE-6772: MultiCollector now catches CollectionTerminatedException and
+  removes the collector that threw this exception from the list of sub
+  collectors to collect. (Adrien Grand)
+
 ======================= Lucene 5.3.0 =======================
 
 New Features
